--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,9 @@
-mat-grid-tile {
-  background: lightblue;
+.grid-container-full {
+  display: grid;
+  height: 100vh;
+  grid-template-rows: auto 100px;
+}
+
+.max-height {
+  height: 2000px;
 }
