Finish nav and add core, shared path

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,1 +1,6 @@
-<p>header works!</p>
+<nav>
+  <a href="#" class="nav-logo-container">
+    <img src="../../../../assets/icons/angular-white-transparent.svg" alt="angular-icon" class="nav-logo">
+    <span class="nav-logo-text">Angular Playground</span>
+  </a>
+</nav>
