--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,11 @@
 
 <div class="grid-container-full">
   <mat-sidenav-container>
-    <mat-sidenav mode="side" opened>Sidenav content</mat-sidenav>
-    <mat-sidenav-content>Main content</mat-sidenav-content>
+    <mat-sidenav #sidenav mode="side" opened>Sidenav content</mat-sidenav>
+    <mat-sidenav-content>
+      Main content
+      <button mat-raised-button color="primary" (click)="sidenav.toggle()">Toggle Side Bar</button>
+    </mat-sidenav-content>
   </mat-sidenav-container>
 
   <ap-footer></ap-footer>
