--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,4 +1,5 @@
 <nav>
+  <mat-icon (click)="toggleNavSide()" class="nav-side-toggle">menu</mat-icon>
   <a href="#" class="nav-logo-container">
     <img src="../../../../assets/icons/angular-white-transparent.svg" alt="angular-icon" class="nav-logo">
     <span class="nav-logo-text">Angular Playground</span>
