--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -1,7 +1,7 @@
 @import "../../../../assets/colors.scss";
 
 nav {
-  padding: 8px 16px;
+  padding: 15px;
   background-color: $primary-color;
 
   a {
@@ -9,8 +9,15 @@ nav {
   }
 }
 
+.nav-side-toggle {
+  color: #FFFFFF;
+  margin: 0 20px 0 0;
+}:hover {
+  cursor: pointer;
+}
+
 .nav-logo-container {
-  display: flex;
+  display: inline-flex;
   align-items: center;
 
   .nav-logo {
