Add animation module and update other place code

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
       <ap-side-nav-map [sideNavMapList]="navMapList"></ap-side-nav-map>
     </mat-sidenav>
     <mat-sidenav-content>
-      Main content
+      <router-outlet></router-outlet>
     </mat-sidenav-content>
   </mat-sidenav-container>
 
