--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,9 +1,6 @@
 .grid-container-full {
   display: grid;
-  height: 100vh;
+  height: calc(100vh - 60px);
   grid-template-rows: auto 100px;
 }
 
-.max-height {
-  height: 2000px;
-}
