--- a/src/app/core/components/side-nav-map/side-nav-map.component.html
+++ b/src/app/core/components/side-nav-map/side-nav-map.component.html
@@ -1,3 +1,3 @@
-<a *ngFor="let link of sideNavMapList" class="side-map-link" href="{{link.path}}">
+<a *ngFor="let link of sideNavMapList" class="side-map-link" routerLink="{{link.path}}">
   <div matRipple [matRippleColor]="rippleColor" class="side-map-text">{{link.name}}</div>
 </a>
