--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,4 +4,6 @@
   platform
 </p>
 
-<ap-nav-card *ngFor="let navMap of navMapList" [navMap]="navMap"></ap-nav-card>
+<div class="home-card-container">
+  <ap-nav-card *ngFor="let navMap of navMapList" [navMap]="navMap"></ap-nav-card>
+</div>
