--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,4 +1,16 @@
+@import "../../assets/media-query";
+
 .home-summary {
   text-align: center;
-  margin: 50px 0 20px 0;
+  margin: 50px 30px 20px 30px;
+}
+
+.home-card-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+
+@media only screen and (max-width: $mobile-size) {
 }
