--- a/src/app/animations/components/basic-animation/basic-animation.component.scss
+++ b/src/app/animations/components/basic-animation/basic-animation.component.scss
@@ -1,14 +1,13 @@
-.section-container {
-  width: 80%;
-  border: 1px solid gray;
-  margin: 30px auto;
+.section-card {
+  margin: 50px 0;
 }
 
 .open-close-container {
-  border: 1px solid #dddddd;
+  border: 1px solid #DDDDDD;
   margin-top: 1em;
   padding: 20px 20px 0px 20px;
   color: #000000;
   font-weight: bold;
   font-size: 20px;
 }
+
