--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,5 +5,5 @@
 </p>
 
 <div class="home-card-container">
-  <ap-nav-card *ngFor="let navMap of navMapList" [navMap]="navMap"></ap-nav-card>
+  <ap-nav-card *ngFor="let navMap of fullNavMapList | keyvalue" [navMap]="navMap.value"></ap-nav-card>
 </div>
