--- a/src/app/animations/animations.component.scss
+++ b/src/app/animations/animations.component.scss
@@ -1,3 +1,4 @@
+@import "../../assets/colors";
 
 .nav-box {
   display: inline-block;
@@ -6,3 +7,23 @@
   border: 1px solid gray;
 }
 
+.chip-container {
+  color: $white-color;
+
+  &:nth-of-type(odd) {
+    background-color: $primary-color;
+  }
+
+  &:nth-of-type(even) {
+    background-color: $secondary-color;
+  }
+
+  .chip-link {
+    color: inherit;
+    text-decoration: none;
+  }
+}
+
+.body-container {
+  margin: 90px 0;
+}
