--- a/src/app/animations/components/basic-animation/basic-animation.component.html
+++ b/src/app/animations/components/basic-animation/basic-animation.component.html
@@ -1,9 +1,16 @@
-<div class="section-container">
-  <nav>
-    <button (click)="toggle()">Toggle Open/Close</button>
-  </nav>
+<mat-card class="section-card">
+  <mat-card-title>Basic Effect</mat-card-title>
+  <mat-card-subtitle>
+    Only 2 states: open to closed and closed to open
+  </mat-card-subtitle>
+  <mat-card-content>
+    <nav>
+      <button (click)="toggle()">Toggle Open/Close</button>
+    </nav>
 
-  <div [@openClose]="isOpen ? 'open' : 'closed'" class="open-close-container">
-    <p>The box is now {{ isOpen ? 'Open' : 'Closed' }}!</p>
-  </div>
-</div>
+    <div [@openClose]="isOpen ? 'open' : 'closed'" class="open-close-container">
+      <p>The box is now {{ isOpen ? 'Open' : 'Closed' }}!</p>
+    </div>
+  </mat-card-content>
+</mat-card>
+
