--- a/src/app/core/components/side-nav-map/side-nav-map.component.html
+++ b/src/app/core/components/side-nav-map/side-nav-map.component.html
@@ -1,3 +1,3 @@
-<a *ngFor="let link of sideNavMapList" class="side-map-link" routerLink="{{link.path}}">
-  <div matRipple [matRippleColor]="rippleColor" class="side-map-text">{{link.name}}</div>
+<a *ngFor="let link of fullSideNavMapList | keyvalue" class="side-map-link" routerLink="{{link.value.path}}">
+  <div matRipple [matRippleColor]="rippleColor" class="side-map-text">{{link.value.name}}</div>
 </a>
