--- a/src/app/animations/components/transition-trigger/transition-trigger.component.html
+++ b/src/app/animations/components/transition-trigger/transition-trigger.component.html
@@ -1,1 +1,53 @@
-<p>transition-trigger works!</p>
+<mat-card class="section-card">
+  <mat-card-title>Multiple Transition</mat-card-title>
+  <mat-card-subtitle>
+    Transitions are matched in the order in which they are defined.
+    So, other transitions on top will replace the bottom one.
+  </mat-card-subtitle>
+  <mat-card-content>
+    <nav>
+      <button (click)="toggle()">Toggle Open/Close</button>
+    </nav>
+
+    <div [@openClose]="isOpen ? 'open' : 'closed'" class="open-close-container">
+      <p>The box is now {{ isOpen ? 'Open' : 'Closed' }}!</p>
+    </div>
+  </mat-card-content>
+</mat-card>
+
+
+<mat-card class="section-card">
+  <mat-card-title>Entering and Leaving</mat-card-title>
+  <mat-card-subtitle>
+    :enter and :leave are aliases for the void => * and * => void transitions.
+    These aliases are used by several animation functions.
+  </mat-card-subtitle>
+  <mat-card-content>
+    <nav>
+      <button (click)="insertRemoveToggle()">Toggle Insert/Remove</button>
+    </nav>
+
+    <div @myInsertRemoveTrigger *ngIf="isShown" class="insert-remove-container">
+      <p>The box is inserted</p>
+    </div>
+  </mat-card-content>
+</mat-card>
+
+
+<mat-card class="section-card">
+  <mat-card-title>Number Value</mat-card-title>
+  <mat-card-subtitle>
+    The transition() function takes additional selector values, :increment and :decrement.
+  </mat-card-subtitle>
+  <mat-card-content>
+    <nav>
+      <button (click)="increaseDecreaseToggle('I')">Increase Number</button>
+      <button (click)="increaseDecreaseToggle('D')">Decrease Number</button>
+    </nav>
+
+    <div [@filterAnimation]="exampleNumber" class="increase-decrease-container">
+      <p>The number is changed to {{exampleNumber}}</p>
+      <div *ngFor="let n of testData">{{n.name}}</div>
+    </div>
+  </mat-card-content>
+</mat-card>
