--- a/src/app/animations/components/transition-trigger/transition-trigger.component.scss
+++ b/src/app/animations/components/transition-trigger/transition-trigger.component.scss
@@ -1,21 +1,4 @@
-.open-close-container {
-  border: 1px solid #DDDDDD;
-  margin-top: 1em;
-  padding: 20px 20px 0px 20px;
-  color: #000000;
-  font-weight: bold;
-  font-size: 20px;
-}
-
-.insert-remove-container {
-  border: 1px solid #DDDDDD;
-  margin-top: 1em;
-  color: #000000;
-  font-weight: bold;
-  font-size: 20px;
-}
-
-.increase-decrease-container {
+.effect-container {
   border: 1px solid #DDDDDD;
   margin-top: 1em;
   color: #000000;
